<resources>
  <string name="app_name" translatable="false">Openticator</string>

  <!-- Welcome -->
  <string name="welcome_body_title">Welcome to Openticator</string>
  <string name="welcome_body_first">Improve the protection of your online accounts enabling
    two-factor authentication (2FA).
  </string>
  <string name="welcome_body_second">Click on Start to sign in with your Google account.
  </string>
  <string name="start">Start</string>
  <string name="whats_openticator">What\'s Openticator?</string>
  <string name="unable_to_make_cloud_login">Unable to login with Google. Check if you have any
    Internet connection available and try again.
  </string>

  <!-- Master Password -->
  <string name="configure_master_password">Configure Master Password</string>
  <string name="password">Password</string>
  <string name="confirm_password">Confirm password</string>
  <string name="next">Next</string>
  <string name="master_password_explanation">The master password will be used to encrypt your
    database in order to protect your accounts. Try to pick a string password with 10 characters at
    least mixing numbers and letters\nPlease, keep in mind if you forget your master password you
    won\'t be able to recover your database in other device.
  </string>
  <string name="your_password_is_weak">Your password is weak, must be 10 or more characters
  </string>
  <string name="the_passwords_are_not_equal">Check the passwords, they should be equal</string>

  <!-- Drawer Layout -->
  <string name="drawer_open">Open</string>
  <string name="drawer_close">Close</string>
  <string name="categories">Categories</string>
  <string name="all_accounts">All accounts</string>

  <!-- Settings -->
  <string name="settings">Settings</string>
  <string name="general">General</string>
  <string name="cloud">Cloud</string>
  <string name="rate_me">Rate me!</string>
  <string name="cloud_summary">Keep safe your accounts in the cloud using your own Google Drive
    account. Coming soon!.
  </string>
  <string name="google_drive" translatable="false">Google Drive</string>

  <!-- Add Account Manually -->
  <string name="add_account_manually">Add Account Manually</string>
  <string name="account_name">Account name</string>
  <string name="account_secret">Secret / Key</string>
  <string name="time_based">Time based</string>
  <string name="add">Add</string>
  <string name="please_set_account_name">Please, set the account\'s name</string>
  <string name="please_set_account_secret">Please, set the account\'s secret</string>
  <string name="invalid_secret">The secret is not valid, it should contains only A–Z or 2-7
    characters
  </string>
  <string name="tap_in_the_button_to_add_your_first_account">Tap in the circle button to add your
    first account!
  </string>

  <!-- Add Account from Camera -->
  <string name="scan_qr_code">Scan QR code</string>
  <string name="add_account">Add account</string>
  <string name="unable_to_open_the_camera">Unable to open the camera</string>
  <string name="camera_permission">Camera permission</string>
  <string name="camera_permission_needed_for_scan_qr">Camera permission is needed to scan QR codes
  </string>
  <string name="qr_explanation">Usually, a QR code is provided by the web when activating a 2-Step
    security, you have to scan it to add a new account.\nPress the SCAN QR CODE button and move your
    phone over the QR code.
  </string>
  <string name="unable_to_save_the_account">Unable to save the account</string>
  <string name="unable_to_decode_qr">Unable to decode QR</string>

  <!-- List Accounts -->
  <string name="edit">Edit</string>
  <string name="delete">Delete</string>
  <string name="category">Category</string>
  <string name="logo">Logo</string>
  <string name="rename_account">Rename account</string>
  <string name="add_to_category">Add to category</string>
  <string name="create_new_category">Create new category</string>
  <string name="no_categories">No categories</string>
  <string name="choose_logo">Choose logo</string>
  <string name="passcode_copied_to_clipboard">Code copied to clipboard!</string>

  <!-- Issuers -->
  <string name="unknown" translatable="false">Unknown</string>
  <string name="aws" translatable="false">AWS</string>
  <string name="digital_ocean" translatable="false">Digital Ocean</string>
  <string name="bitcoin" translatable="false">Bitcoin</string>
  <string name="dropbox" translatable="false">Dropbox</string>
  <string name="evernote" translatable="false">Evernote</string>
  <string name="facebook" translatable="false">Facebook</string>
  <string name="github" translatable="false">GitHub</string>
  <string name="google" translatable="false">Google</string>
  <string name="microsoft" translatable="false">Microsoft</string>
  <string name="slack" translatable="false">Slack</string>
  <string name="wordpress" translatable="false">WordPress</string>
  <string name="roberts_space_industries" translatable="false">Roberts Space Industries</string>

</resources>
