<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    tools:context="com.arturogutierrez.openticator.domain.welcome.activity.WelcomeActivity">

  <ImageView
      android:id="@+id/logo_iv"
      android:src="@mipmap/ic_splash"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="12dp"
      android:layout_gravity="center"
      tools:visibility="gone"
  />

  <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/welcome_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingLeft="@dimen/content_padding_left"
        android:paddingRight="@dimen/content_padding_right"
        android:gravity="center"
        android:orientation="vertical">

      <View
          android:id="@+id/logo_placeholder"
          android:layout_width="144dp"
          android:layout_height="144dp"
          android:layout_gravity="center_horizontal"
          android:visibility="invisible"
      />

      <TextView
          android:id="@+id/title_tv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="50dp"
          android:text="@string/welcome_body_title"
          android:textColor="@android:color/white"
          android:alpha="0"
          style="@style/TextAppearance.AppCompat.Title"
      />

      <TextView
          android:id="@+id/title_first"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:text="@string/welcome_body_first"
          android:textColor="@android:color/white"
          android:alpha="0"
          style="@style/TextAppearance.AppCompat.Body1"
      />

      <TextView
          android:id="@+id/title_second"
          android:layout_marginTop="10dp"
          android:layout_marginBottom="30dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/welcome_body_second"
          android:textColor="@android:color/white"
          android:alpha="0"
          style="@style/TextAppearance.AppCompat.Body1"
      />

      <Button
          android:id="@+id/start_btn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/start"
          android:alpha="0"
          style="@style/Widget.AppCompat.Button"
      />

      <ProgressBar
          android:id="@+id/pb_loading"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:indeterminate="true"
          android:visibility="gone"
          android:theme="@style/WhiteControlActivatedTheme"
          style="@style/Base.Widget.AppCompat.ProgressBar"
      />

    </LinearLayout>

    <TextView
        android:id="@+id/what_is"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/whats_openticator"
        android:textColor="@android:color/white"
        android:textAllCaps="true"
        android:alpha="0"
        style="@style/TextAppearance.AppCompat.Body2"
    />
  </RelativeLayout>

</FrameLayout>
